--- a/webconfing/encabezado.html
+++ b/webconfing/encabezado.html
@@ -4,7 +4,7 @@
     <table class="tabla-menu">
         <tr>
             <td>
-                <img src="https://constituciones-monarquicas.github.io/p/webconfing/logo.jpeg" alt="Logo de mi sitio web">
+                <img src="https://codmonar.github.io/a/webconfing/logo.jpeg" alt="Logo de mi sitio web">
             </td>
             <td>
                 <h1>Codigos Monarquicas</h1>
@@ -37,7 +37,7 @@
                 <!-- Crear el primer elemento de la lista -->
                 <li>
                     <!-- Crear el enlace a la página de inicio -->
-                    <a href="https://constituciones-monarquicas.github.io/p/">Inicio</a>
+                    <a href="https://codmonar.github.io/a/">Inicio</a>
                 </li>
 
                 <!-- Crear el tercer elemento de la lista -->
