--- a/webconfing/encabezado.html
+++ b/webconfing/encabezado.html
@@ -33,6 +33,11 @@
                     <a href="https://www.instagram.com/codigos_monarquicos/">Instagram</a>
                 </li>
                 <!-- Crear el cuarto elemento de la lista -->
+                <li>
+                    <!-- Crear el enlace a la página de contacto -->
+                    <a href="https://alumucaes-my.sharepoint.com/:f:/g/personal/manuel_bernalcarvajal_alum_uca_es/Euq_mOVZw49FuebMhh2Td0gBsier52Xrkw4EIJ5cHkvvOA">Subir archivos o contenidos a esta web</a>
+                </li>
+                <!-- Crear el cuarto elemento de la lista -->
                 
             </ul>
         </div>
