--- a/webconfing/encabezado.html
+++ b/webconfing/encabezado.html
@@ -35,7 +35,7 @@
                 <!-- Crear el cuarto elemento de la lista -->
                 <li>
                     <!-- Crear el enlace a la página de contacto -->
-                    <a href="https://alumucaes-my.sharepoint.com/:f:/g/personal/manuel_bernalcarvajal_alum_uca_es/Euq_mOVZw49FuebMhh2Td0gBsier52Xrkw4EIJ5cHkvvOA">Subir archivos o contenidos a esta web</a>
+                    <a href="https://alumucaes-my.sharepoint.com/:f:/g/personal/manuel_bernalcarvajal_alum_uca_es/Euq_mOVZw49FuebMhh2Td0gBsier52Xrkw4EIJ5cHkvvOA">Subir contenido</a>
                 </li>
                 <!-- Crear el cuarto elemento de la lista -->
                 
