--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <div id="encabezado"></div>
 <!----------------Contenido pagina----------------------->
 
+<h1>Índice web</h1>
 
+<p><a href="0_Pages/0_Tributario/0_2/index.htm">Amigos de Alejandro
+(Impuestos)</a> </p>
 
 
 
