--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi página web</title>
+  <title>Inicio de Codigos Monarquicos</title>
   <!-- Enlazar el archivo CSS externo -->
   <link rel="stylesheet" href="https://codmonar.github.io/a/webconfing/css.css">
   <!-- Incluir la librería jQuery -->
