severiano se une

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <p><a href="0_Pages/0_Tributario/0_2/index.htm">Amigos de Alejandro
 (Impuestos)</a> </p>
-
+<p><a href="0_Pages/0_Admin/0_3/Amigos%20de%20severiano.htm">Amigos de Severiano
+(Contratos del sector publico)</a> </p>
 
 
 <!---------------Fin contenido pagina-------------------->
