--- a/0_Pages/0_Admin/0_3/Amigos de severiano.htm
+++ b/0_Pages/0_Admin/0_3/Amigos de severiano.htm
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+<link rel="manifest" href="https://codmonar.github.io/a/app/manifest.json">
   <title>Mi página web</title>
   <!-- Enlazar el archivo CSS externo -->
   <link rel="stylesheet" href="https://codmonar.github.io/a/webconfing/css.css">
@@ -52,6 +53,7 @@
 
 </head>
 <body>
+ <script src="https://codmonar.github.io/a/app/pwabuilder-sw.js"></script>
 <!-- Incluir el archivo externo del encabezado -->
 <div id="encabezado"></div>
 <!----------------Contenido pagina----------------------->
