--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+<link rel="manifest" href="https://codmonar.github.io/a/app/manifest.json">
   <title>Inicio de Codigos Monarquicos</title>
   <!-- Enlazar el archivo CSS externo -->
   <link rel="stylesheet" href="https://codmonar.github.io/a/webconfing/css.css">
@@ -9,6 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+ <script src="https://codmonar.github.io/a/app/pwabuilder-sw.js"></script>
 <!-- Incluir el archivo externo del encabezado -->
 <div id="encabezado"></div>
 <!----------------Contenido pagina----------------------->
