--- a/0_Pages/0_Tributario/0_2/IRPF.htm
+++ b/0_Pages/0_Tributario/0_2/IRPF.htm
@@ -2,6 +2,7 @@
 
 <head>
 <meta http-equiv=“Content-Type” content=“text/html; charset=UTF-8”>
+  <link rel="stylesheet" href="https://codmonar.github.io/a/webconfing/css.css">
 <meta name=“IRPFexplicacion” content=“Documento que explica el IRPF poco a poco”>
 <title>IRPF apertura</title>
 <style>
