--- a/0_Pages/0_Tributario/0_2/IP.htm
+++ b/0_Pages/0_Tributario/0_2/IP.htm
@@ -122,7 +122,7 @@ div.WordSection1
     link.rel = "stylesheet";
     link.type = "text/css";
     link.media = "print";
-    link.href = "print.css";
+    link.href = "https://codmonar.github.io/a/webconfing/print.css";
 
     // Añadir el elemento link al head del iframe
     iframeContent.head.appendChild(link);
