--- a/app/oflinepage.html
+++ b/app/oflinepage.html
@@ -20,8 +20,10 @@
 <div id="encabezado"></div>
 <!----------------Contenido pagina----------------------->
 
-
-
+<h1>Esta es una pagina offline</h1>
+<p></p>
+<p>Si estas viendo esto es que no tienes internet, o que has tenido la mala suerte de que el servidor no está disposible</p>
+<p>Pues eso es todo</p>
 
 
 
