--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
- <script src="https://codmonar.github.io/a/app/pwabuilder-sw.js"></script>
+<script>
+  if (typeof navigator.serviceWorker !== 'https://codmonar.github.io/a/app/pwabuilder-sw.js') {
+    navigator.serviceWorker.register('sw.js')
+  }
+</script>
 <!-- Incluir el archivo externo del encabezado -->
 <div id="encabezado"></div>
 <!----------------Contenido pagina----------------------->
