--- a/0_Pages/0_Admin/0_3/0_ContratosSP/DAIII CP 2 Clases de contratos.html
+++ b/0_Pages/0_Admin/0_3/0_ContratosSP/DAIII CP 2 Clases de contratos.html
@@ -19,11 +19,11 @@
 <!-- Incluir el archivo externo del encabezado -->
 <div id="encabezado"></div>
 <!----------------Contenido pagina----------------------->
-<p>/<a href="Inicio.htm">inicio</a>/</p>
+<p>/<a href="Inicio.htm">inicio</a>/  Si no carga recargue (dele a inicio y vuelva a entrar, acaba funcionando)</p>
 
 <iframe src="https://docs.google.com/gview?url=
 https://codmonar.github.io/a/0_Pages/0_Admin/0_3/0_ContratosSP/DAIII CP 2 Clases de contratos.pdf
-&embedded=true" style="width:100%; height:900px;" frameborder="0" ></iframe>
+&embedded=true" style="width:100%; height:700px;" frameborder="0" ></iframe>
 
 
 
