--- a/0_Pages/0_Admin/0_3/0_ContratosSP/DAIII CP 3 Partes (1).html
+++ b/0_Pages/0_Admin/0_3/0_ContratosSP/DAIII CP 3 Partes (1).html
@@ -22,7 +22,7 @@
 <p>/<a href="Inicio.htm">inicio</a>/  Si no carga recargue (dele a inicio y vuelva a entrar, acaba funcionando)</p>
 
 <iframe src="https://docs.google.com/gview?url=
-https://codmonar.github.io/a/0_Pages/0_Admin/0_3/0_ContratosSP/DA%20III%20Caso%20Pr%C3%A1ctico%20n%C2%BA%201.pdf
+https://codmonar.github.io/a/0_Pages/0_Admin/0_3/0_ContratosSP/DAIII CP 3 Partes (1).pdf
 &embedded=true" style="width:100%; height:700px;" frameborder="0" ></iframe>
 
 
