--- a/0_Pages/0_docvarios/0_Docs/Derecho Mercantil II.html
+++ b/0_Pages/0_docvarios/0_Docs/Derecho Mercantil II.html
@@ -20,13 +20,13 @@
 <div id="encabezado"></div>
 <!----------------Contenido pagina----------------------->
 
-<h1>Índice web</h1>
 
-<p><a href="0_Pages/0_Tributario/0_2/index.htm">Amigos de Alejandro
-(Impuestos)</a> </p>
-<p><a href="0_Pages/0_Admin/0_3/Amigos%20de%20severiano.htm">Amigos de Severiano
-(Contratos del sector publico)</a> </p>
-<p><a href="0_Pages/0_docvarios/index.htm">Documentos Varios</a> </p>
+
+<iframe src="https://docs.google.com/gview?url=
+https://codmonar.github.io/a/0_Pages/0_docvarios/Derecho Mercantil II tomo I.pdf
+&embedded=true" style="width:100%; height:700px;" frameborder="0" ></iframe>
+
+
 
 <!---------------Fin contenido pagina-------------------->
 <div id="inferior"></div>
