--- a/0_Pages/0_docvarios/0_Docs/Derecho Mercantil II tomo I.html
+++ b/0_Pages/0_docvarios/0_Docs/Derecho Mercantil II tomo I.html
@@ -19,7 +19,7 @@
 <!-- Incluir el archivo externo del encabezado -->
 <div id="encabezado"></div>
 <!----------------Contenido pagina----------------------->
-
+<h2><a href="https://codmonar.github.io/a/0_Pages/0_docvarios/indice.htm">Volver al Indice</a> </h2>
 
 
 <iframe src="https://docs.google.com/gview?url=
@@ -31,14 +31,7 @@ https://codmonar.github.io/a/0_Pages/0_docvarios/Derecho Mercantil II tomo I.pdf
 <!---------------Fin contenido pagina-------------------->
 <div id="inferior"></div>
 <!-- Cargar los archivos externos con jQuery -->
-<script>
-  $(document).ready(function() {
-    // Cargar el archivo del encabezado
-    $("#encabezado").load("https://codmonar.github.io/a/webconfing/encabezado.html");
-    // Cargar el archivo del inferior
-    $("#inferior").load("https://codmonar.github.io/a/webconfing/inferior.html");
-  });
-</script>
+
 
 
 </body>
