--- a/0_Pages/0_docvarios/index.htm
+++ b/0_Pages/0_docvarios/index.htm
@@ -70,7 +70,7 @@
 <div class=WordSection1>
 <h1>Amigos de Severiano</h1>
   <div class="iframe-container">
-    <iframe src="indice.htm"></iframe>
+    <iframe src="https://drive.google.com/drive/folders/1i6XeLOv3fv1WRfBdiF1esI7dhbePOsO7?usp=sharing"></iframe>
   </div>
  
 <p>Puede arrastrar este recuadro desde la esquina para ajustar su tamaño según su necesidad. Úselo para tomar notas, los datos se guardarán automáticamente en el almacenamiento del navegador.</p>
