--- a/0_Pages/0_docvarios/index.htm
+++ b/0_Pages/0_docvarios/index.htm
@@ -70,7 +70,7 @@
 <div class=WordSection1>
 <h1>Amigos de Severiano</h1>
   <div class="iframe-container">
-    <iframe src="https://mega.nz/folder/UO4yDJyT#xjYlgKMauPaQg3kCkDbT1g"></iframe>
+    <iframe src="indice.htm"></iframe>
   </div>
  
 <p>Puede arrastrar este recuadro desde la esquina para ajustar su tamaño según su necesidad. Úselo para tomar notas, los datos se guardarán automáticamente en el almacenamiento del navegador.</p>
