--- a/webconfing/inferior.html
+++ b/webconfing/inferior.html
@@ -1,3 +1,4 @@
 <p>______________________________________________________________________</p>
 <p>© 2023 Codigos Monarquicos Todos los derechos reservados. </p>
 <p>El contenido de esta web es propiedad intelectual de sus autores y está protegido por la ley. </p>
+<p><i>Version pagina actualizada a: <b>23-01-24</b></i></p>
