--- a/0_Pages/0_testvarios/Test/Test eclesia.html
+++ b/0_Pages/0_testvarios/Test/Test eclesia.html
@@ -174,6 +174,208 @@ var questions = [
   },
 
 
+  {
+    question: "¿Cuál es la principal diferencia entre la visión liberal y la totalitaria en relación a la religión?",
+    options: [
+      "El liberalismo busca la separación entre Iglesia y Estado, mientras que el totalitarismo busca la sumisión del Estado a la religión.",
+      "El liberalismo busca la tolerancia religiosa, mientras que el totalitarismo busca la libertad religiosa.",
+      "El liberalismo busca la libertad de expresión, mientras que el totalitarismo busca la censura.",
+      "El liberalismo busca la democracia, mientras que el totalitarismo busca la dictadura.",
+    ],
+    answer: 0,
+  },
+  {
+    question: "¿Qué significa que una constitución sea confesional?",
+    options: [
+      "Que reconoce la libertad de culto para todas las religiones.",
+      "Que establece una religión oficial del Estado.",
+      "Que prohíbe el ejercicio de cualquier religión.",
+      "Que obliga a todos los ciudadanos a profesar la misma religión.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿En qué se diferencia la tolerancia religiosa de la libertad religiosa?",
+    options: [
+      "La tolerancia permite el ejercicio privado de la religión, mientras que la libertad permite el ejercicio público y privado.",
+      "La tolerancia es un derecho, mientras que la libertad es una obligación.",
+      "La tolerancia es una concesión del Estado, mientras que la libertad es un derecho fundamental.",
+      "La tolerancia se aplica a todas las religiones, mientras que la libertad solo se aplica a la religión oficial del Estado.",
+    ],
+    answer: 0,
+  },
+  {
+    question: "¿Qué medidas se tomaron durante la Regencia de María Cristina que limitaban el poder de la Iglesia?",
+    options: [
+      "Desamortización de bienes de la Iglesia.",
+      "Cierre de conventos y monasterios.",
+      "Expulsión de obispos.",
+      "Todas las anteriores.",
+    ],
+    answer: 3,
+  },
+  {
+    question: "¿Qué artículo de la Constitución de 1931 establece la libertad de conciencia y el derecho de profesar y practicar libremente cualquier religión?",
+    options: [
+      "Artículo 25.",
+      "Artículo 26.",
+      "Artículo 27.",
+      "Artículo 28.",
+    ],
+    answer: 2,
+  },
+  {
+    question: "¿Qué limitaciones se establecían en la Constitución de 1931 a la libertad religiosa?",
+    options: [
+      "El respeto a la moral pública.",
+      "La autorización del Gobierno para las manifestaciones públicas de culto.",
+      "La prohibición de la enseñanza religiosa en las escuelas públicas.",
+      "Todas las anteriores.",
+    ],
+    answer: 3,
+  },
+  {
+    question: "¿En qué año se firmó el Concordato entre la Santa Sede y el Estado español?",
+    options: [
+      "1851.",
+      "1931.",
+      "1967.",
+      "1978.",
+    ],
+    answer: 0,
+  },
+  {
+    question: "¿Qué cambios se introdujeron en la política religiosa del régimen franquista a partir de 1967?",
+    options: [
+      "Se pasó de la confesionalidad católica a la aconfesionalidad del Estado.",
+      "Se reconoció la libertad de culto para todas las religiones.",
+      "Se permitió la enseñanza religiosa en las escuelas públicas.",
+      "Se eliminó la censura de prensa.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Cuál es el artículo de la Constitución de 1978 que garantiza la libertad ideológica, religiosa y de culto?",
+    options: [
+      "Artículo 14.",
+      "Artículo 15.",
+      "Artículo 16.",
+      "Artículo 17.",
+    ],
+    answer: 2,
+  },
+  {
+    question: "¿Qué características definen a la Constitución de 1978 en materia religiosa?",
+    options: [
+      "Libertad religiosa.",
+      "Aconfesionalidad del Estado.",
+      "Pluralismo religioso.",
+      "Todas las anteriores.",
+    ],
+    answer: 3,
+  },
+
+  {
+    question: "¿Qué diferencia hay entre confesionalidad formal y confesionalidad doctrinal?",
+    options: [
+      "La confesionalidad formal solo reconoce una religión como oficial del Estado, mientras que la confesionalidad doctrinal obliga a todos los ciudadanos a profesarla.",
+      "La confesionalidad formal obliga al Estado a mantener el culto y sus ministros, mientras que la confesionalidad doctrinal no.",
+      "La confesionalidad formal implica una mayor vinculación entre el poder civil y el religioso que la confesionalidad doctrinal.",
+      "Ambas son lo mismo, solo que con diferentes nombres."
+    ],
+    answer: 1
+  },
+  {
+    question: "¿En qué constitución española se establece por primera vez la libertad religiosa?",
+    options: [
+      "Constitución de 1812",
+      "Constitución de 1837",
+      "Constitución de 1869",
+      "Constitución de 1931"
+    ],
+    answer: 3
+  },
+  {
+    question: "¿Qué medidas antirreligiosas se tomaron durante la Regencia de María Cristina?",
+    options: [
+      "Desamortización de bienes de la Iglesia",
+      "Cierre de conventos y monasterios",
+      "Expulsión de autoridades de la Iglesia",
+      "Todas las anteriores"
+    ],
+    answer: 3
+  },
+  {
+    question: "¿En qué se diferencia la libertad religiosa de la tolerancia religiosa?",
+    options: [
+      "La libertad religiosa es un derecho fundamental, mientras que la tolerancia religiosa es una concesión del Estado.",
+      "La libertad religiosa implica la libertad de culto público y privado, mientras que la tolerancia religiosa solo permite el culto privado.",
+      "La libertad religiosa es incompatible con la confesionalidad del Estado, mientras que la tolerancia religiosa no.",
+      "Ambas son lo mismo, solo que con diferentes nombres."
+    ],
+    answer: 1
+  },
+  {
+    question: "¿Qué características tenía la política religiosa del régimen franquista durante la primera etapa?",
+    options: [
+      "Confesionalidad católica del Estado",
+      "Tolerancia religiosa del culto privado",
+      "Prohibición de otras confesiones religiosas",
+      "Todas las anteriores"
+    ],
+    answer: 3
+  },
+  {
+    question: "¿Qué cambios se produjeron en la política religiosa del régimen franquista a partir de 1967?",
+    options: [
+      "Se reconoció la libertad religiosa",
+      "Se permitió el culto público de otras confesiones religiosas",
+      "Se eliminó la confesionalidad católica del Estado",
+      "Se suprimieron las Leyes Fundamentales"
+    ],
+    answer: 1
+  },
+  {
+    question: "¿Qué artículo de la Constitución española de 1978 se refiere a la libertad religiosa?",
+    options: [
+      "Artículo 14",
+      "Artículo 15",
+      "Artículo 16",
+      "Artículo 17"
+    ],
+    answer: 2
+  },
+  {
+    question: "¿Qué significa que la Constitución española de 1978 sea aconfesional?",
+    options: [
+      "Que el Estado no reconoce ninguna religión como oficial",
+      "Que el Estado no tiene ninguna relación con la Iglesia",
+      "Que el Estado no puede financiar a ninguna religión",
+      "Todas las anteriores"
+    ],
+    answer: 0
+  },
+  {
+    question: "¿Qué es el pluralismo religioso?",
+    options: [
+      "La coexistencia de diferentes religiones en una sociedad",
+      "La libertad de elegir la religión que se desee",
+      "El respeto a todas las religiones",
+      "Todas las anteriores"
+    ],
+    answer: 3
+  },
+  {
+    question: "¿Cuáles son los principales desafíos que enfrenta la libertad religiosa en la España actual?",
+    options: [
+      "El crecimiento del fundamentalismo religioso",
+      "La discriminación por motivos religiosos",
+      "La laicidad del Estado",
+      "Todas las anteriores"
+    ],
+    answer: 3
+  },
+
 
 
 
