--- a/0_Pages/0_testvarios/Test/arugment test.html
+++ b/0_Pages/0_testvarios/Test/arugment test.html
@@ -378,7 +378,7 @@ var questions = [
     options: [
       "Es un enfoque demasiado pesimista del derecho.",
       "Es una teoría que no ofrece soluciones prácticas.",
-      "**Es una teoría que legitima el poder judicial.**",
+      "Es una teoría que legitima el poder judicial.",
       "Es una teoría que ignora la importancia de la moral en el derecho.",
     ],
     answer: 2,
@@ -388,7 +388,7 @@ var questions = [
     options: [
       "El Realismo Americano se centra en la función del juez.",
       "El Realismo Escandinavo se centra en la función del legislador.",
-      "**El Realismo Americano se basa en el pragmatismo.**",
+      "El Realismo Americano se basa en el pragmatismo.",
       "El Realismo Escandinavo se basa en el idealismo.",
     ],
     answer: 2,
@@ -398,7 +398,7 @@ var questions = [
     options: [
       "Hans Kelsen y Carl Schmitt.",
       "John Rawls y Ronald Dworkin.",
-      "**Oliver Wendell Holmes, Roscoe Pound y Karl Llewellyn.**",
+      "Oliver Wendell Holmes, Roscoe Pound y Karl Llewellyn.",
       "Lon Fuller y H.L.A. Hart.",
     ],
     answer: 2,
@@ -408,7 +408,7 @@ var questions = [
     options: [
       "En la Edad Media.",
       "En la Ilustración.",
-      "**A finales del siglo XIX y principios del XX.**",
+      "A finales del siglo XIX y principios del XX.",
       "En la segunda mitad del siglo XX.",
     ],
     answer: 2,
@@ -417,7 +417,7 @@ var questions = [
     question: "¿Qué impacto ha tenido el Realismo Jurídico en el pensamiento jurídico actual?",
     options: [
       "Ha sido completamente reemplazado por otras teorías.",
-      "**Ha contribuido a una visión más pragmática del derecho.**",
+      "Ha contribuido a una visión más pragmática del derecho.",
       "Ha sido absorbido por otras corrientes de pensamiento jurídico.",
       "Ha sido refutado por las teorías críticas del derecho.",
     ],
