--- a/0_Pages/0_testvarios/Test/arugment test.html
+++ b/0_Pages/0_testvarios/Test/arugment test.html
@@ -328,7 +328,7 @@ var questions = [
     options: [
       "El derecho es un sistema lógico y deductivo.",
       "El derecho es una herramienta para la justicia social.",
-      "**El derecho es una práctica social en constante evolución.**",
+      "El derecho es una práctica social en constante evolución.",
       "El derecho es un conjunto de normas abstractas e inmutables.",
     ],
     answer: 2,
@@ -337,7 +337,7 @@ var questions = [
     question: "¿Qué papel juega el juez en el Realismo Jurídico?",
     options: [
       "El juez es un aplicador neutral de la ley.",
-      "**El juez tiene un rol activo en la creación del derecho.**",
+      "El juez tiene un rol activo en la creación del derecho.",
       "El juez es un representante del poder político.",
       "El juez es un intérprete objetivo de la voluntad del legislador.",
     ],
@@ -348,7 +348,7 @@ var questions = [
     options: [
       "El derecho es independiente de la sociedad.",
       "El derecho es un reflejo de la sociedad.",
-      "**El derecho es un instrumento para el cambio social.**",
+      "El derecho es un instrumento para el cambio social.",
       "El derecho es una herramienta para el control social.",
     ],
     answer: 2,
@@ -357,7 +357,7 @@ var questions = [
     question: "¿Qué es la 'jurisprudencia sociológica' propuesta por Roscoe Pound?",
     options: [
       "Un método para estudiar el derecho desde una perspectiva histórica.",
-      "**Un enfoque que analiza el derecho en su contexto social.**",
+      "Un enfoque que analiza el derecho en su contexto social.",
       "Una teoría que defiende la primacía del derecho natural.",
       "Una escuela de pensamiento que aboga por la libre interpretación judicial.",
     ],
@@ -368,7 +368,7 @@ var questions = [
     options: [
       "El derecho es un sistema irracional e impredecible.",
       "El derecho se basa en la lógica y la razón.",
-      "**El derecho se desarrolla a partir de la experiencia y la práctica.**",
+      "El derecho se desarrolla a partir de la experiencia y la práctica.",
       "El derecho es un reflejo de las ideas y valores de la sociedad.",
     ],
     answer: 2,
