--- a/0_Pages/0_testvarios/Test/arugment test.html
+++ b/0_Pages/0_testvarios/Test/arugment test.html
@@ -597,6 +597,221 @@ var questions = [
   },
   
 
+  {
+    question: "¿En qué se basa el argumento escéptico característico en el ámbito del derecho?",
+    options: [
+      "En la falta de criterios objetivos para juzgar la calidad de los argumentos jurídicos.",
+      "En la inexistencia de normas jurídicas que regulen la mayoría de las controversias.",
+      "En la dificultad de aplicar las normas jurídicas a casos concretos.",
+      "En la falta de acuerdo entre los juristas sobre la interpretación de las normas.",
+    ],
+    answer: 0,
+  },
+  {
+    question: "¿Qué crítica realiza Adolfo Sánchez Hidalgo al positivismo normativista de Hans Kelsen?",
+    options: [
+      "Que no reconoce la existencia de principios jurídicos generales.",
+      "Que no toma en cuenta la realidad social en la aplicación del derecho.",
+      "Que reduce la argumentación jurídica a la subsunción del caso en la norma.",
+      "Que niega la posibilidad de la interpretación judicial de las normas.",
+    ],
+    answer: 2,
+  },
+  {
+    question: "¿Cuál es la principal diferencia entre el realismo jurídico y el marxismo jurídico?",
+    options: [
+      "El realismo jurídico niega la existencia del derecho, mientras que el marxismo jurídico lo acepta.",
+      "El realismo jurídico defiende la idoneidad del derecho, mientras que el marxismo jurídico la niega.",
+      "El realismo jurídico se centra en la aplicación del derecho, mientras que el marxismo jurídico se centra en su creación.",
+      "El realismo jurídico es una teoría descriptiva, mientras que el marxismo jurídico es una teoría crítica.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Qué papel juega la argumentación jurídica en la teoría de Boaventura de Sousa Santos?",
+    options: [
+      "Es un elemento fundamental para la justificación de las decisiones jurídicas.",
+      "Es una herramienta para la legitimación del poder político.",
+      "Es una estrategia para la toma de decisiones en un contexto de interlegalidad.",
+      "Es un instrumento para la defensa de los intereses de las clases dominantes.",
+    ],
+    answer: 2,
+  },
+  {
+    question: "¿Qué autores o corrientes de pensamiento se asocian con el escepticismo jurídico?",
+    options: [
+      "Hans Kelsen, Carl Schmitt y Joseph Raz.",
+      "Ronald Dworkin, Robert Alexy y Jürgen Habermas.",
+      "Karl Marx, Friedrich Engels y Antonio Gramsci.",
+      "Lon Fuller, Neil MacCormick y Alan Gewirth.",
+    ],
+    answer: 2,
+  },
+  {
+    question: "¿Qué es la interlegalidad y cómo se relaciona con el escepticismo jurídico?",
+    options: [
+      "Es la coexistencia de diferentes ordenamientos jurídicos en una misma sociedad.",
+      "Es la falta de coherencia entre las normas jurídicas de un mismo ordenamiento.",
+      "Es la dificultad para determinar qué norma jurídica debe aplicarse en un caso concreto.",
+      "Es la negación de la existencia de un ordenamiento jurídico global.",
+    ],
+    answer: 0,
+  },
+  {
+    question: "¿En qué medida la crítica al positivismo jurídico ha contribuido al desarrollo del escepticismo jurídico?",
+    options: [
+      "Ha debilitado la confianza en la capacidad del derecho para resolver problemas sociales.",
+      "Ha puesto de manifiesto la indeterminación del derecho y la necesidad de la argumentación.",
+      "Ha demostrado la irrelevancia del derecho en la configuración de las relaciones sociales.",
+      "Ha deslegitimado la función del juez en la aplicación del derecho.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Qué autores contemporáneos han desarrollado posiciones escépticas frente al derecho?",
+    options: [
+      "Roberto Mangabeira Unger, Boaventura de Sousa Santos y Duncan Kennedy.",
+      "Martha Nussbaum, Ronald Dworkin y Jürgen Habermas.",
+      "H.L.A. Hart, John Rawls y Joseph Raz.",
+      "Lon Fuller, Neil MacCormick y Alan Gewirth.",
+    ],
+    answer: 0,
+  },
+  
+
+  {
+    question: "¿En qué se basa el argumento escéptico característico en el ámbito del derecho?",
+    options: [
+      "En la falta de criterios objetivos para juzgar la calidad de los argumentos.",
+      "En la existencia de un acuerdo general sobre la solución a los casos jurídicos.",
+      "En la dificultad de aplicar las normas jurídicas a casos concretos.",
+      "En la inexistencia de instrumentos éticos en la retórica forense.",
+    ],
+    answer: 0,
+  },
+  {
+    question: "¿Qué postura adopta Hans Kelsen con respecto al proceso de aplicación de las normas jurídicas?",
+    options: [
+      "Un decisionismo limitado por las posibilidades del texto normativo.",
+      "Una interpretación abierta y flexible de las normas.",
+      "La búsqueda de la solución más justa para cada caso concreto.",
+      "La aplicación estricta de la ley sin posibilidad de interpretación.",
+    ],
+    answer: 0,
+  },
+  {
+    question: "¿Cuál es la diferencia fundamental entre el realismo jurídico y el marxismo jurídico?",
+    options: [
+      "El realismo niega la idoneidad del derecho, mientras que el marxismo la acepta.",
+      "El realismo se centra en la función del derecho, mientras que el marxismo en su origen.",
+      "El realismo defiende la argumentación jurídica, mientras que el marxismo la rechaza.",
+      "El realismo es una teoría jurídica, mientras que el marxismo es una teoría social.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Qué papel juega el derecho en el cambio social según el marxismo clásico?",
+    options: [
+      "Un papel fundamental como motor del cambio.",
+      "Un papel secundario como herramienta de control social.",
+      "Un papel irrelevante, siendo la lucha política lo importante.",
+      "Un papel positivo como garante de la justicia social.",
+    ],
+    answer: 2,
+  },
+  {
+    question: "¿Qué son los Critical Legal Studies?",
+    options: [
+      "Un movimiento de defensa del positivismo jurídico.",
+      "Una corriente de pensamiento que critica el derecho desde una perspectiva marxista.",
+      "Una escuela de pensamiento que aboga por la interpretación literal de las leyes.",
+      "Un movimiento social que lucha por la igualdad de derechos para todos.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Qué diferencia la concepción del derecho de Boaventura de Sousa Santos del positivismo jurídico?",
+    options: [
+      "Santos defiende una visión pluralista del derecho, mientras que el positivismo es monista.",
+      "Santos niega la existencia del derecho, mientras que el positivismo lo afirma.",
+      "Santos considera que el derecho estatal es el único ordenamiento jurídico válido, mientras que el positivismo reconoce la existencia de otros ordenamientos.",
+      "Santos reduce el derecho a la retórica, mientras que el positivismo lo define como un sistema de normas.",
+    ],
+    answer: 0,
+  },
+  {
+    question: "¿Qué papel juega la argumentación en la teoría de Boaventura de Sousa Santos?",
+    options: [
+      "Un papel central como herramienta para la justificación del derecho.",
+      "Un papel secundario como instrumento de persuasión.",
+      "Un papel irrelevante, siendo la violencia la forma principal de toma de decisiones.",
+      "No hay espacio para la argumentación en la teoría de Santos, ya que el derecho se reduce a retórica.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Qué es la interlegalidad?",
+    options: [
+      "La existencia de diferentes ordenamientos jurídicos en una misma sociedad.",
+      "La interpretación de las leyes por parte de los jueces.",
+      "La aplicación de la ley a casos concretos.",
+      "La creación de nuevas leyes por parte del poder legislativo.",
+    ],
+    answer: 0,
+  },
+  
+
+  {
+    question: "¿Qué NO es el Pragmatismo Jurídico según Atienza?",
+    options: [
+      "Una teoría sobre el derecho.",
+      "Una actitud hacia el derecho y la teoría jurídica.",
+      "Una exhortación acerca de la teoría.",
+      "Una crítica al positivismo jurídico.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Cuál NO es una de las cuestiones que el Pragmatismo Jurídico recuerda a los juristas y jueces?",
+    options: [
+      "La necesidad de considerar el contexto en los problemas jurídicos.",
+      "La importancia de la lógica formal en la argumentación jurídica.",
+      "El rechazo de una concepción demasiado abstracta del derecho.",
+      "La vinculación del derecho con las necesidades prácticas de los hombres.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Qué características del Pragmatismo Jurídico se mencionan en el texto?",
+    options: [
+      "Visión instrumental del derecho.",
+      "Énfasis en las consecuencias y el futuro.",
+      "Importancia de la práctica como medio de conocimiento.",
+      "Todas las anteriores.",
+    ],
+    answer: 3,
+  },
+  {
+    question: "¿Cuál es la situación actual de las grandes concepciones jurídicas?",
+    options: [
+      "Se mantienen rígidamente separadas.",
+      "Se han difuminado las fronteras entre ellas.",
+      "El realismo se ha impuesto como la única teoría válida.",
+      "El iusnaturalismo ha resurgido como la corriente dominante.",
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Qué afirmación sobre el iusnaturalismo de John Finnis es CORRECTA?",
+    options: [
+      "Es incompatible con cualquier forma de positivismo jurídico.",
+      "Se basa en una concepción metafísica del derecho natural.",
+      "No tiene en cuenta las necesidades sociales y políticas.",
+      "No parece ser incompatible con un iuspositivismo moderado.",
+    ],
+    answer: 3,
+  },
+
 
 
 
