--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <p><a href="0_Pages/0_Admin/0_3/Amigos%20de%20severiano.htm">Amigos de Severiano
 (Contratos del sector publico)</a> </p>
 <p><a href="0_Pages/0_docvarios/index.htm">Documentos Varios</a> </p>
+<p><a href="0_Pages/0_testvarios/index.htm">Test automaticos</a></p>
+
+
 
 <!---------------Fin contenido pagina-------------------->
 <div id="inferior"></div>
