--- a/webconfing/encabezado.html
+++ b/webconfing/encabezado.html
@@ -30,12 +30,12 @@
                 <!-- Crear el tercer elemento de la lista -->
                 <li>
                     <!-- Crear el enlace a la página de contacto -->
-                    <a href="https://www.instagram.com/codigos_monarquicos/">Instagram</a>
+                    <a href="https://codmonar.github.io/a/0_Pages/0_testvarios/index.htm">Test automaticos de repaso</a>
                 </li>
                 <!-- Crear el cuarto elemento de la lista -->
                 <li>
                     <!-- Crear el enlace a la página de contacto -->
-                    <a href="https://alumucaes-my.sharepoint.com/:f:/g/personal/manuel_bernalcarvajal_alum_uca_es/Euq_mOVZw49FuebMhh2Td0gBsier52Xrkw4EIJ5cHkvvOA">Subir contenido</a>
+                    <a href="https://codmonar.github.io/a/0_Pages/0_docvarios/index.htm">Biblioteca de documentos</a>
                 </li>
                 <!-- Crear el cuarto elemento de la lista -->
                 
