--- a/webconfing/inferior.html
+++ b/webconfing/inferior.html
@@ -2,3 +2,7 @@
 <p>© 2023 Codigos Monarquicos Todos los derechos reservados. </p>
 <p>El contenido de esta web es propiedad intelectual de sus autores y está protegido por la ley. </p>
 <p><i>Version pagina actualizada a: <b>13-02-24</b> a las <b>19:06</b></i></p>
+
+
+<script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/c77b1cd1-a3ff-4800-8d13-0253ffee2cf9/webchat/config.js" defer></script>
